styles in text-view, login and signup components. Fixed bug when "log out" button is visible in the login or signup page. PageNotFoundComponent is active when a URL is incorrect.

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,4 +1,5 @@
 .title{
   font-size: 40px;
   text-align: left;
+  font-weight: bold;
 }
